# trlc-platform

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  generate_docs.sh
.github/: copilot-instructions.md
.github/workflows/: benchmarks.yml  ci.yml  documentation.yml  release.yml  security.yml
cmake/: CheckCompiler.cmake  CheckFeatures.cmake  CheckPlatform.cmake  config.hpp.in  trlc-platform-config.cmake.in
docs/: 32-bit-example.html  Architecture-specific-example.html  Basic-example.html  Cache-aligned-example.html  Comprehensive-example.html  README_8md.html  SIMD-aware-example.html  SIMD-example.html  Vector-aware-example.html  Version-dependent-example.html  _2home_2tranglc_2sources_2trlc-platform_2include_2trlc_2platform_2core_8hpp-example.html  _2home_2tranglc_2sources_2trlc-platform_2include_2trlc_2platform_2debug_8hpp-example.html  annotated.html  annotated_dup.js  architecture_8hpp.html  architecture_8hpp.js  classtrlc_1_1platform_1_1DebugUtils-members.html  compiler_8hpp.html  compiler_8hpp_source.html  cpp__standard_8hpp.html  cpp__standard_8hpp.js  cpp__standard_8hpp_source.html  debug_8hpp.js  debug_8hpp_source.html  dir_031c1f8cd741c385190d6e6232f6e128.js  endianness_8hpp.html  endianness_8hpp_source.html  examples.html  files.html  hierarchy.html  hierarchy.js  mainpage.dox  menudata.js  namespacemembers_enum.html  namespacemembers_func.html  namespaces_dup.js  namespacetrlc_1_1platform.js  namespacetrlc_1_1platform_1_1detail.html  navtreeindex1.js  navtreeindex2.js  (+25 more)
docs/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_c.js  all_e.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  defines_0.js  enums_1.js  enums_3.js  enums_5.js  enumvalues_0.js  enumvalues_11.js  enumvalues_13.js  enumvalues_3.js  enumvalues_6.js  enumvalues_8.js  enumvalues_a.js  enumvalues_c.js  enumvalues_e.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  functions_0.js  functions_1.js  (+14 more)
examples/: CMakeLists.txt  portable_library_example.cpp  readme_example.cpp
include/trlc/platform/: architecture.hpp  compiler.hpp  core.hpp  cpp_standard.hpp  debug.hpp  endianness.hpp  features.hpp  macros.hpp  platform.hpp  traits.hpp  typeinfo.hpp
tests/: CMakeLists.txt  test_architecture_detection.cpp  test_compiler_detection.cpp  test_constexpr_evaluation.cpp  test_core_integration.cpp  test_cpp_standard_detection.cpp  test_cross_platform.cpp  test_debug_utils.cpp  test_endianness.cpp  test_features_detection.cpp  test_integration.cpp  test_macros.cpp  test_platform_detection.cpp  test_template_specializations.cpp  test_typeinfo.cpp
